@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/rsync
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.256 2014/12/18 21:44:39 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.257 2015/02/14 09:51:38 jer Exp $
+
+  14 Feb 2015; Jeroen Roovers <jer@gentoo.org> rsync-3.1.1.ebuild:
+  Stable for HPPA (bug #540000).
 
   18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
   files/rsyncd.conf-3.0.9-r1:
